# rusty-temp

./: Cargo.toml
src/: main.rs
wix/: main.wxs
